chore: 팀원 환경 맞춤용 docker-compose 및 CORS 설정 추가